logs/ift-nifty.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ift_nifty-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/nifty'...
Listing './lib/python3.5/site-packages/nifty/demos'...
Compiling './lib/python3.5/site-packages/nifty/demos/demo_excaliwir.py'...
***   File "./lib/python3.5/site-packages/nifty/demos/demo_excaliwir.py", line 172
    print max(np.abs(dtau))
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nifty/lm'...
Compiling './lib/python3.5/site-packages/nifty/nifty_core.py'...
***   File "./lib/python3.5/site-packages/nifty/nifty_core.py", line 7978
    if(det<>0):
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nifty/nifty_explicit.py'...
***   File "./lib/python3.5/site-packages/nifty/nifty_explicit.py", line 1106
    if(det<>0):
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nifty/nifty_power.py'...
***   File "./lib/python3.5/site-packages/nifty/nifty_power.py", line 471
    elif(Sk.domain<>domain):
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nifty/rg'...
Compiling './lib/python3.5/site-packages/nifty/rg/gfft_rg.py'...
***   File "./lib/python3.5/site-packages/nifty/rg/gfft_rg.py", line 117
    print "gfft v. "+VERSION
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
